# multi_floor_nav

./: move_base.launch
config/: costmap_common.yaml
gazebo_plugin/: CMakeLists.txt  GUIExampleSpawnWidget.cc
magni_description/launch/: description.launch
magni_description/meshes/: pudu_v2.dae  pudu_v2.stl
magni_description/urdf/: magni.urdf.xacro
magni_gazebo/: package.xml
magni_gazebo/config/: magni_controllers.yaml
magni_nav/: CMakeLists.txt  package.xml
magni_nav/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml
magni_nav/config_mapping/: costmap_common_params.yaml  costmap_global_params.yaml  move_base_common_params.yaml
magni_nav/fleet/: control_panel.py  edit_pgm.py  fleet.py  fleet_command.py  fleet_v2.py  gazebo_model.py  multi_floor_nav.py  multi_floor_panel.py  start_back_end.bash  start_fleet.bash  start_front_end.bash  start_mapping.bash  start_single_robot.bash  valid_name.py
magni_nav/fleet/yaml/: .yaml  55555.yaml  aaa.yaml  default.yaml  hihi.yaml  model_world.yaml  ppp.yaml  testing map.yaml  testing.yaml  testing2.yaml  testing3.yaml  w311_virtual_world.yaml
magni_nav/launch/: amcl.launch  aruco.launch  move_base.launch  move_base.xml  move_base_backup.launch  start_maps.launch  start_planner.launch
magni_nav/maps/: .yaml  1f_v1.yaml  2f_v1.yaml  3f_v1.yaml  ground_v1.yaml
magni_nav/maps/backup/: gf_v1.yaml
magni_nav/param/: costmap_common_param.yaml  global_costmap_param.yaml  local_costmap_param.yaml
magni_nav/rviz/: navigation.rviz  navigation_1.rviz  navigation_2.rviz
useful_command/: useful_command.txt
(+21 files in other folders)
