<?xml version="1.0"?>
<package format="2">
  <name>magni_nav</name>
  <version>0.6.1</version>
  <description>The magni_nav package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fiducial_slam</exec_depend>
  <exec_depend>aruco_detect</exec_depend>
  <exec_depend>move_basic</exec_depend>
  <exec_depend>move_base</exec_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>dwb_critics</exec_depend>         <!-- for dwb_local_planner -->
  <exec_depend>dwb_local_planner</exec_depend>   <!-- for dwb_local_planner -->
  <exec_depend>dwb_plugins</exec_depend>         <!-- for dwb_local_planner -->
  <!-- <exec_depend>eband_local_planner</exec_depend> -->
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>map_server</exec_depend>

     <!-- for dwb_local_planner -->
  <exec_depend>move_base</exec_depend>
  <exec_depend>nav_core_adapter</exec_depend>    <!-- for dwb_local_planner -->
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>sbpl_lattice_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

  <!-- We implicitly depend on raspicam_node too -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
